--- a/DataTemplateTriggers.UI/Views/ShellView.xaml
+++ b/DataTemplateTriggers.UI/Views/ShellView.xaml
@@ -2,6 +2,7 @@
     x:Class="DataTemplateTriggers.UI.Views.ShellView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:local="clr-namespace:DataTemplateTriggers.UI.Views"
     Title="{Binding Title}"
     Width="800"
     Height="600"
@@ -21,6 +22,9 @@
 
         <!--  Line Separator  -->
         <Separator Grid.Row="1" Margin="0,16" />
+        
+        <!-- Consoles View -->
+        <local:ConsolesView Grid.Row="2" HorizontalAlignment="Left" />
 
     </Grid>
 </Window>
