--- a/DataTemplateTriggers.UI/Views/ConsolesView.xaml
+++ b/DataTemplateTriggers.UI/Views/ConsolesView.xaml
@@ -9,10 +9,17 @@
         <local:ConsolesViewModel />
     </UserControl.DataContext>
 
-    <Border Padding="24" Background="{StaticResource BackgroundBrush2}" CornerRadius="5">
+    <Border
+        Padding="24"
+        Background="{StaticResource BackgroundBrush2}"
+        CornerRadius="5">
 
         <Border.Effect>
-            <DropShadowEffect ShadowDepth="3" BlurRadius="4" Direction="315" Opacity="0.7" />
+            <DropShadowEffect
+                BlurRadius="4"
+                Direction="315"
+                Opacity="0.7"
+                ShadowDepth="3" />
         </Border.Effect>
         <Grid>
 
@@ -28,6 +35,7 @@
             <!--  Game Console List  -->
             <ListBox
                 Grid.Row="1"
+                MinHeight="200"
                 Background="Transparent"
                 BorderThickness="0" />
 
