--- a/DataTemplateTriggers.UI/Assets/Styles.xaml
+++ b/DataTemplateTriggers.UI/Assets/Styles.xaml
@@ -1,22 +1,12 @@
-﻿<ResourceDictionary
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:DataTemplateTriggers.UI.Assets">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <!--  Color Styles  -->
-    <Color x:Key="BackgroundColor1">#FF2C333F</Color>
-    <Color x:Key="BackgroundColor2">#FF1B222C</Color>
-    <Color x:Key="BackgroundColor3">#FF1B222C</Color>
-    <Color x:Key="ForegroundColor1">#FFFFFFFF</Color>
-    <Color x:Key="ForegroundColor2">#FFD1D9E3</Color>
-    <Color x:Key="ForegroundColor3">#FF828C9A</Color>
-
-    <SolidColorBrush x:Key="BackgroundBrush1" Color="{StaticResource BackgroundColor1}" />
-    <SolidColorBrush x:Key="BackgroundBrush2" Color="{StaticResource BackgroundColor2}" />
-    <SolidColorBrush x:Key="BackgroundBrush3" Color="{StaticResource BackgroundColor3}" />
-    <SolidColorBrush x:Key="ForegroundBrush1" Color="{StaticResource ForegroundColor1}" />
-    <SolidColorBrush x:Key="ForegroundBrush2" Color="{StaticResource ForegroundColor2}" />
-    <SolidColorBrush x:Key="ForegroundBrush3" Color="{StaticResource ForegroundColor3}" />
+    <SolidColorBrush x:Key="BackgroundBrush1" Color="#FF2C333F" />
+    <SolidColorBrush x:Key="BackgroundBrush2" Color="#FF1B222C" />
+    <SolidColorBrush x:Key="BackgroundBrush3" Color="#AB151A23" />
+    <SolidColorBrush x:Key="ForegroundBrush1" Color="#FFFFFFFF" />
+    <SolidColorBrush x:Key="ForegroundBrush2" Color="#FFD1D9E3" />
+    <SolidColorBrush x:Key="ForegroundBrush3" Color="#FF828C9A" />
 
     <!--  A Style that affects all TextBlocks  -->
     <Style TargetType="TextBlock">
@@ -29,16 +19,14 @@
     <!--  A Style for Window title  -->
     <Style
         x:Key="TitleText"
-        BasedOn="{StaticResource {x:Type TextBlock}}"
         TargetType="TextBlock">
         <Setter Property="FontSize" Value="26" />
         <Setter Property="Foreground" Value="{StaticResource ForegroundBrush2}" />
     </Style>
 
-    <!--  A Style for Window title  -->
+    <!--  A Style for Header text  -->
     <Style
         x:Key="HeaderText"
-        BasedOn="{StaticResource {x:Type TextBlock}}"
         TargetType="TextBlock">
         <Setter Property="FontSize" Value="18" />
         <Setter Property="Foreground" Value="{StaticResource ForegroundBrush3}" />
@@ -49,7 +37,7 @@
         <Setter Property="Background" Value="{StaticResource BackgroundBrush3}" />
     </Style>
 
-    <!--  A Style that all ListBoxes  -->
+    <!--  A Style for all ListBoxes  -->
     <Style TargetType="ListBox">
         <Setter Property="MinHeight" Value="200" />
         <Setter Property="Background" Value="Transparent" />
@@ -59,8 +47,8 @@
     <!--  A Style for a Border control that shows a shadow and rounded corners  -->
     <Style x:Key="Card" TargetType="Border">
         <Setter Property="Padding" Value="24" />
-        <Setter Property="Background" Value="{StaticResource BackgroundBrush2}" />
-        <Setter Property="CornerRadius" Value="8" />
+        <Setter Property="Background" Value="{StaticResource BackgroundBrush3}" />
+        <Setter Property="CornerRadius" Value="4" />
         <Setter Property="Effect">
             <Setter.Value>
                 <DropShadowEffect
@@ -71,5 +59,47 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <!--#region Game Console Styles-->
+
+    <SolidColorBrush x:Key="NintendoRed" Color="#FFEF6767" />
+    <SolidColorBrush x:Key="NintendoRedFaded" Color="#33EF6767" />
+    <SolidColorBrush x:Key="PlaystationBlue" Color="#FF006FCD" />
+    <SolidColorBrush x:Key="PlaystationBlueFaded" Color="#33006FCD" />
+    <SolidColorBrush x:Key="XBoxGreen" Color="#FF43A047" />
+    <SolidColorBrush x:Key="XBoxGreenFaded" Color="#3343A047" />
+
+    <Style x:Key="BaseBorder" TargetType="Border">
+        <Setter Property="Margin" Value="0,2" />
+        <Setter Property="Padding" Value="8,4" />
+        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="CornerRadius" Value="2" />
+    </Style>
+
+    <Style
+        x:Key="PlaystationStyle"
+        BasedOn="{StaticResource BaseBorder}"
+        TargetType="Border">
+        <Setter Property="Background" Value="{StaticResource PlaystationBlueFaded}" />
+        <Setter Property="BorderBrush" Value="{StaticResource PlaystationBlue}" />
+    </Style>
+
+    <Style
+        x:Key="XBoxStyle"
+        BasedOn="{StaticResource BaseBorder}"
+        TargetType="Border">
+        <Setter Property="Background" Value="{StaticResource XBoxGreenFaded}" />
+        <Setter Property="BorderBrush" Value="{StaticResource XBoxGreen}" />
+    </Style>
+
+    <Style
+        x:Key="NintendoStyle"
+        BasedOn="{StaticResource BaseBorder}"
+        TargetType="Border">
+        <Setter Property="Background" Value="{StaticResource NintendoRedFaded}" />
+        <Setter Property="BorderBrush" Value="{StaticResource NintendoRed}" />
+    </Style>
+
+    <!--#endregion-->
 
 </ResourceDictionary>
